[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/monster-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Monster.gd" type="Script" id=2]
[ext_resource path="res://ShimmeringLight.tscn" type="PackedScene" id=3]
[ext_resource path="res://audio/player/heartbeat_slow.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 9.0

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 8 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Die"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[node name="Monster" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="MonsterDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MonsterDetection"]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 0
position = Vector2( 0, -8 )
texture = ExtResource( 1 )
hframes = 18
frame = 17

[node name="Light" parent="." instance=ExtResource( 3 )]
position = Vector2( 2.8026e-45, -8 )
texture_scale = 0.2
color = Color( 0.498039, 0.498039, 0.498039, 1 )
mode = 0

[node name="HeartBeatPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 6.538
autoplay = true
max_distance = 300.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )
anims/Die = SubResource( 4 )
anims/Idle = SubResource( 3 )

[node name="DiePlayer" type="AudioStreamPlayer2D" parent="."]
volume_db = 20.206
[connection signal="area_entered" from="MonsterDetection" to="." method="_on_MonsterDetection_area_entered"]
[connection signal="area_exited" from="MonsterDetection" to="." method="_on_MonsterDetection_area_exited"]
[connection signal="body_entered" from="MonsterDetection" to="." method="_on_MonsterDetection_body_entered"]
